--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 aws_account_number: <AWS account number>
 aws_region: <AWS region>
 project_name: <Project name that will be prepended to AWS resources>
+
 vpc_cidr_range: <VPC CIDR range>
 dev_machine_ip: <Development machine IP>
+
+db_admin_user: <The Postgres DB admin user>
+db_admin_password: <The Postgres DB admin user password>
