Added an application stack containing a S3 bucket and a EC2 instance

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,6 @@ dev_machine_ip: <Development machine IP>
 
 db_admin_user: <The Postgres DB admin user>
 db_admin_password: <The Postgres DB admin user password>
+
+key_pair_id: <AWS EC2 key pair ID>
+key_pair_name: <AWS EC2 key pair name>
