--- a/assets/ffx-fire-app.service
+++ b/assets/ffx-fire-app.service
@@ -4,7 +4,7 @@ After=syslog.target
 
 [Service]
 User=ec2-user
-ExecStart=/usr/bin/java -Dspring.config.location=/opt/application.properties -jar /opt/fire-services.jar
+ExecStart=sudo /usr/bin/java -Dspring.config.location=/opt/application.properties -jar /opt/fire-services.jar
 
 SuccessExitStatus=143
 TimeoutStopSec=10
