--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,6 @@ db_admin_password: <The Postgres DB admin user password>
 
 key_pair_id: <AWS EC2 key pair ID>
 key_pair_name: <AWS EC2 key pair name>
+
+domain_name: <The application's domain name>
+api_domain: <The API's sub domain name>
